<resources>
    <string name="app_name">AndroidChatClient</string>
    <string name="user_name_hint">user name</string>
    <string name="default_user_name">JaneDoe</string>
    <string name="room_name_hint">room name</string>
    <string name="log_in_hint">Log In</string>
    <string name="default_room_name">room42</string>
    <string name="floatingActionButtonDescription">Log out</string>
    <string name="message_input_hint">Send Message...</string>
    <string name="send_message_btn_hint">Send</string>
</resources>